# datamays

./: .gitignore  LICENSE  Procfile  README  README.md  ReleaseChecklist.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
billboardstats/: admin.py  apps.py  models.py  urls.py  views.py
billboardstats/migrations/: 0001_initial.py
billboardstats/templates/billboardstats/: base.html  search.html
bio/: urls.py  views.py
bio/templates/bio/: 403.html  404.html  base.html  home.html
contact/: admin.py  forms.py  models.py  urls.py  views.py
contact/templates/contact/: contact_form.html  contact_success.html
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_project_expected_outcome_project_status_and_more.py  0003_tag_post.py  0004_remove_project_blog_post_url_project_blog_post_slug_and_more.py
core/templates/: 403.html  404.html
core/templates/core/: about.html  base.html  home.html  project_detail.html  projects.html  styleguide.html  writing_detail.html  writings.html
core/templates/core/partials/: footer.html  navbar.html
datamays/: asgi.py  settings.py  sitemaps.py  urls.py  wsgi.py
datamays/datamays/: asgi.py  settings.py  urls.py
datamays/datamays/middleware/: heroku_redirect_middleware.py
datamays/middleware/: heroku_redirect_middleware.py
static/css/: tailwind.css
staticfiles/billboardstats/css/: style.css
