[project]
name = "datamays"
version = "0.1.0"
description = "Personal portfolio and data engineering showcase site"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "Django>=6.0,<7.0",
    "psycopg[binary]>=3.3,<4.0",
    "gunicorn>=23.0,<24.0",
    "python-dotenv>=1.2,<2.0",
    "sqlparse>=0.5.4,<1.0",
    "typing-extensions>=4.15,<5.0",
    "whitenoise>=6.9,<7.0",
    "dj-database-url>=2.2,<3.0",
]

[tool.uv]
